Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Destination_Git_Commit__c.field-meta.xml
<CustomField>
    <fullName>Destination_Git_Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Git Commit</label>
    <referenceTo>Git_Org_Commit__c</referenceTo>
    <relationshipLabel>Snapshot Differences (Destination Git Commit)</relationshipLabel>
    <relationshipName>Snapshot_Differences1</relationshipName>
    <type>Lookup</type>
</CustomField>