Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Destination_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Snapshot Differences (Destination Credential)</relationshipLabel>
    <relationshipName>Snapshot_Differences1</relationshipName>
    <type>Lookup</type>
</CustomField>