Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>