Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Partial_Selection__c.field-meta.xml
<CustomField>
    <fullName>Partial_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To calculate the differences only of selected files, select this checkbox.</inlineHelpText>
    <label>Partial Selection</label>
    <type>Checkbox</type>
</CustomField>