Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Source_Git_Commit__c.field-meta.xml
<CustomField>
    <fullName>Source_Git_Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Git Commit</label>
    <referenceTo>Git_Org_Commit__c</referenceTo>
    <relationshipLabel>Snapshot Differences</relationshipLabel>
    <relationshipName>Snapshot_Differences</relationshipName>
    <type>Lookup</type>
</CustomField>