Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/fields/Source_Org_Credential__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Snapshot Differences</relationshipLabel>
    <relationshipName>Snapshot_Differences</relationshipName>
    <type>Lookup</type>
</CustomField>