Dummy_Package_for_scratch_org/main/default/objects/Snapshot_Difference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partial_Selection__c</columns>
    <columns>Source_Option__c</columns>
    <columns>Destination_Option__c</columns>
    <columns>Source_Git_Commit__c</columns>
    <columns>Source_Org_Credential__c</columns>
    <columns>Destination_Git_Commit__c</columns>
    <columns>Destination_Org_Credential__c</columns>
    <columns>Last_Run__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>